fix for defaults on sudo and ssh user, and galera network

--- a/swarm/stacks/mariadb-galera-nodify-master.yml
+++ b/swarm/stacks/mariadb-galera-nodify-master.yml
@@ -20,7 +20,7 @@ services:
 networks:
     default:
         external:
-            name: galera-network
+            name: ${GALERA_NETWORK_NAME}
 
 secrets:
   xtrabackup_password:
