fix for the ENV driven network definition in the stack files

--- a/swarm/stacks/mariadb-galera-nodify-master.yml
+++ b/swarm/stacks/mariadb-galera-nodify-master.yml
@@ -18,9 +18,12 @@ services:
       - xtrabackup_password
 
 networks:
-    default:
-        external:
-            name: ${GALERA_NETWORK_NAME}
+  galera_network:
+    external:
+      name: ${GALERA_NETWORK_NAME}
+  default:
+      external:
+          name: galera_network
 
 secrets:
   xtrabackup_password:
