--- a/swarm/deploys/galera-example.yml
+++ b/swarm/deploys/galera-example.yml
@@ -1,5 +1,7 @@
 docker-host: demo-swarm-m1:2376
 
+use-ndvs: true
+
 galera-node1: demo-swarm-w1
 galera-node2: demo-swarm-w2
 galera-node3: demo-swarm-w3
