network cleanup and segmentation for db-lb

--- a/swarm/stacks/mariadb-galera-nodify-master.yml
+++ b/swarm/stacks/mariadb-galera-nodify-master.yml
@@ -21,7 +21,7 @@ networks:
       name: ${GALERA_NETWORK_NAME}
   default:
       external:
-          name: galera_network
+          name: ${GALERA_NETWORK_NAME}
 
 secrets:
   xtrabackup_password:
