--- a/swarm/deploys/galera-example.yml
+++ b/swarm/deploys/galera-example.yml
@@ -7,8 +7,11 @@ galera-node1: demo-swarm-w1
 galera-node2: demo-swarm-w2
 galera-node3: demo-swarm-w3
 
-galera-network-name: galera_network
+galera-network-name: data_network
 galera-network: 10.0.9.0/24
+
+app-network-name: web_network
+app-network: 192.168.42.0/24
 
 ssh-user: admin
 ssh-become: sudo 
