--- a/swarm/stacks/mariadb-galera.yml
+++ b/swarm/stacks/mariadb-galera.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 
 services:
-  galera-node1:
+  galera-seed:
     image: idstudios/mariadb-galera-docker
     deploy:
       placement:
@@ -15,11 +15,28 @@ services:
       - NODE_ADDRESS=eth0
     command: seed
     volumes:
-      - /data/galera_node1:/var/lib/mysql    
+      - /data/galera_nodeseed:/var/lib/mysql    
     secrets:
       - xtrabackup_password
       - mysql_password
       - mysql_root_password
+
+  galera-node1:
+    image: idstudios/mariadb-galera-docker
+    environment:
+      - XTRABACKUP_PASSWORD_FILE=/run/secrets/xtrabackup_password
+      - NODE_ADDRESS=eth0
+      - HEALTHY_WHILE_BOOTING=1
+    command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node2,${STACK_NAME}_galera-node3
+    volumes:
+      - /data/galera_node1:/var/lib/mysql    
+    deploy:
+      mode: replicated
+      replicas: 0
+      placement:
+        constraints: [node.labels.db-galera-node-1 == true]
+    secrets:
+      - xtrabackup_password
 
   galera-node2:
     image: idstudios/mariadb-galera-docker
@@ -27,7 +44,7 @@ services:
       - XTRABACKUP_PASSWORD_FILE=/run/secrets/xtrabackup_password
       - NODE_ADDRESS=eth0
       - HEALTHY_WHILE_BOOTING=1
-    command: node ${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node3
+    command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node3
     volumes:
       - /data/galera_node2:/var/lib/mysql    
     deploy:
@@ -44,7 +61,7 @@ services:
       - XTRABACKUP_PASSWORD_FILE=/run/secrets/xtrabackup_password
       - NODE_ADDRESS=eth0
       - HEALTHY_WHILE_BOOTING=1
-    command: node ${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node2
+    command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node2
     volumes:
       - /data/galera_node3:/var/lib/mysql    
     deploy:
