--- a/images/mariadb-galera-docker/build
+++ b/images/mariadb-galera-docker/build
@@ -1,12 +1,13 @@
 #!/bin/bash
 
+IMAGE_REPO=`cat ../registry`
 MARIADB_VER=10.1
-docker build --build-arg imageVer=$MARIADB_VER -t idstudios/mariadb-galera-docker:$MARIADB_VER .
-docker push idstudios/mariadb-galera-docker:$MARIADB_VER
+docker build --build-arg imageVer=$MARIADB_VER -t $IMAGE_REPO/mariadb-galera-docker:$MARIADB_VER .
+docker push $IMAGE_REPO/mariadb-galera-docker:$MARIADB_VER
 
-docker tag idstudios/mariadb-galera-docker:$MARIADB_VER idstudios/mariadb-galera-docker:latest
-docker push idstudios/mariadb-galera-docker:latest
+docker tag $IMAGE_REPO/mariadb-galera-docker:$MARIADB_VER $IMAGE_REPO/mariadb-galera-docker:latest
+docker push $IMAGE_REPO/mariadb-galera-docker:latest
 
 MARIADB_VER=10.2
-docker build --build-arg imageVer=$MARIADB_VER -t idstudios/mariadb-galera-docker:$MARIADB_VER .
-docker push idstudios/mariadb-galera-docker:$MARIADB_VER
+docker build --build-arg imageVer=$MARIADB_VER -t $IMAGE_REPO/mariadb-galera-docker:$MARIADB_VER .
+docker push $IMAGE_REPO/mariadb-galera-docker:$MARIADB_VER
