--- a/images/mariadb-galera-haproxy/build
+++ b/images/mariadb-galera-haproxy/build
@@ -1,4 +1,6 @@
 #!/bin/bash
 
-docker build -t idstudios/mariadb-galera-haproxy:latest .
-docker push idstudios/mariadb-galera-haproxy:latest
+IMAGE_REPO=`cat ../registry`
+
+docker build -t $IMAGE_REPO/mariadb-galera-haproxy:latest .
+docker push $IMAGE_REPO/mariadb-galera-haproxy:latest
