--- a/images/mariadb-galera-haproxy/haproxy.cfg
+++ b/images/mariadb-galera-haproxy/haproxy.cfg
@@ -1,27 +1,14 @@
-global
-    log 127.0.0.1 local0 notice
-
-defaults
-    log global
-    retries 2
-    timeout connect 300000
-    timeout client 300000
-    timeout server 300000
-    maxconn 2000
-    option redispatch
-    retries 3
-
-frontend db_front_end
-  bind *:3306
-  mode tcp
-  log global
-  option tcplog
-  use_backend db_back_end
-
-backend db_back_end
-  mode tcp
-  balance roundrobin
-  server mysql-1 $HAPROXY_GALERA_NODE_1 check
-  server mysql-2 $HAPROXY_GALERA_NODE_2 check
-  server mysql-3 $HAPROXY_GALERA_NODE_3 check
+listen  haproxy_3306
+        bind *:3306
+        mode tcp
+        timeout connect 10800
+        timeout client 10800
+        timeout server 10800
+        balance leastconn
+        option httpchk
+        option allbackups
+        default-server port 8080 inter 2s downinter 5s rise 3 fall 2 slowstart 60s maxconn 64 maxqueue 128 weight 100
+        server galera-1 $HAPROXY_GALERA_NODE_1 check
+        server galera-2 $HAPROXY_GALERA_NODE_2 check
+        server galera-3 $HAPROXY_GALERA_NODE_3 check
   
