--- a/swarm/stacks/mariadb-galera.yml
+++ b/swarm/stacks/mariadb-galera.yml
@@ -30,6 +30,7 @@ services:
     command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node2,${STACK_NAME}_galera-node3
     volumes:
       - /data/galera_node1:/var/lib/mysql    
+    stop_grace_period: 10s
     deploy:
       mode: replicated
       replicas: 0
@@ -47,6 +48,7 @@ services:
     command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node3
     volumes:
       - /data/galera_node2:/var/lib/mysql    
+    stop_grace_period: 10s
     deploy:
       mode: replicated
       replicas: 0
@@ -64,6 +66,7 @@ services:
     command: node ${STACK_NAME}_galera-seed,${STACK_NAME}_galera-node1,${STACK_NAME}_galera-node2
     volumes:
       - /data/galera_node3:/var/lib/mysql    
+    stop_grace_period: 10s
     deploy:
       mode: replicated
       replicas: 0
@@ -80,7 +83,6 @@ services:
       - HAPROXY_GALERA_NODE_1=${STACK_NAME}_galera-node1:3306
       - HAPROXY_GALERA_NODE_2=${STACK_NAME}_galera-node2:3306
       - HAPROXY_GALERA_NODE_3=${STACK_NAME}_galera-node3:3306
-      - HAPROXY_GALERA_TIMEOUT=3000
     networks:
       - app_network
       - galera_network
