--- a/images/mariadb-galera-haproxy/Dockerfile
+++ b/images/mariadb-galera-haproxy/Dockerfile
@@ -1,5 +1,6 @@
 FROM haproxy:1.7
-COPY haproxy.cfg /usr/local/etc/haproxy/haproxy.cfg
+COPY haproxy3.cfg /usr/local/etc/haproxy/haproxy3.cfg
+COPY haproxy5.cfg /usr/local/etc/haproxy/haproxy5.cfg
 COPY start.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/start.sh
 ENTRYPOINT ["/usr/local/bin/start.sh"]
