--- a/k8s/mariadb-galera-template.yml
+++ b/k8s/mariadb-galera-template.yml
@@ -17,47 +17,126 @@
     run_once: true
     ignore_errors: true
 
-  - name: Generate the iSCSI based galera volumes manifest
+  - name: Ensure the cluster 3-node sub-folder exists
+    local_action:
+      module: shell
+      _raw_params: "if [ ! -d {{ galera_cluster_home }}/3-node ]; then mkdir {{ galera_cluster_home }}/3-node; fi"
+    become: false
+    run_once: true
+    ignore_errors: true
+
+  - name: Ensure the cluster 5-node sub-folder exists
+    local_action:
+      module: shell
+      _raw_params: "if [ ! -d {{ galera_cluster_home }}/5-node ]; then mkdir {{ galera_cluster_home }}/5-node; fi"
+    become: false
+    run_once: true
+    ignore_errors: true
+
+  - name: Generate the 3-Node iSCSI based galera volumes manifest
     local_action:
       module: template
-      src: templates/galera-volumes.j2
-      dest: "{{ galera_cluster_home }}/galera-volumes.yml"
+      src: templates/3-node/galera-3-volumes.j2
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-volumes.yml"
       mode: 0766
     run_once: true
     become: false
 
-  - name: Generate the galera seed manifest
+  - name: Generate the 5-Node iSCSI based galera volumes manifest
+    local_action:
+      module: template
+      src: templates/5-node/galera-5-volumes.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-volumes.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the galera 3-nodes manifest
+    local_action:
+      module: template
+      src: templates/3-node/galera-3-nodes.j2
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-nodes.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the galera 5-nodes manifest
+    local_action:
+      module: template
+      src: templates/5-node/galera-5-nodes.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-nodes.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the galera 3-nodes manifest with backup agent
+    local_action:
+      module: template
+      src: templates/3-node/galera-3-nodes-backup.j2
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-nodes-backup.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the galera 5-nodes manifest with backup agent
+    local_action:
+      module: template
+      src: templates/5-node/galera-5-nodes-backup.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-nodes-backup.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the 3-nodes galera haproxy manifest
+    local_action:
+      module: template
+      src: templates/3-node/galera-3-haproxy.j2
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-haproxy.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the 5-nodes galera haproxy manifest
+    local_action:
+      module: template
+      src: templates/5-node/galera-5-haproxy.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-haproxy.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the 3-node galera seed manifest
     local_action:
       module: template
       src: templates/galera-seed.j2
-      dest: "{{ galera_cluster_home }}/galera-seed.yml"
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-seed.yml"
       mode: 0766
     run_once: true
     become: false
 
-  - name: Generate the galera nodes manifest
+  - name: Generate the 5-node galera seed manifest
     local_action:
       module: template
-      src: templates/galera-nodes.j2
-      dest: "{{ galera_cluster_home }}/galera-nodes.yml"
+      src: templates/galera-seed.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-seed.yml"
       mode: 0766
     run_once: true
     become: false
 
-  - name: Generate the galera haproxy manifest
-    local_action:
-      module: template
-      src: templates/galera-haproxy.j2
-      dest: "{{ galera_cluster_home }}/galera-haproxy.yml"
-      mode: 0766
-    run_once: true
-    become: false
-
-  - name: Generate the galera external access manifest
+  - name: Generate the 3-node galera external access manifest
     local_action:
       module: template
       src: templates/galera-external-access.j2
-      dest: "{{ galera_cluster_home }}/galera-external-access.yml"
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-external-access.yml"
+      mode: 0766
+    run_once: true
+    become: false
+    
+  - name: Generate the 5-node galera external access manifest
+    local_action:
+      module: template
+      src: templates/galera-external-access.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-external-access.yml"
       mode: 0766
     run_once: true
     become: false
