updates to backup agent in k8s

--- a/k8s/clusters/tier1/3-node/galera-3-nodes-backup.yml
+++ b/k8s/clusters/tier1/3-node/galera-3-nodes-backup.yml
@@ -119,9 +119,6 @@ spec:
       - name: tier1-galera-backup-volume
         persistentVolumeClaim:
           claimName: tier1-galera-backup-volume-claim
-      - name: tier1-galera-backup-log-volume
-        persistentVolumeClaim:
-          claimName: tier1-galera-backup-log-volume-claim
       - name: mysqld-pid
         emptyDir: {}
 
@@ -168,6 +165,9 @@ spec:
           value: "Fender2000"
         - name: RETENTION_PERIOD_DAYS
           value: "7"
+        - name: INC_BACKUP_INTERVAL
+          value: "5m"
+        
         volumeMounts:
           - name: tier1-galera-node3-volume
             mountPath: "/var/lib/mysql"
