--- a/k8s/clusters/tier1/galera.conf
+++ b/k8s/clusters/tier1/galera.conf
@@ -17,6 +17,7 @@ galera_cluster_backup_path="/data/shared/backups"
 galera_cluster_backup_log_nfs_server=192.168.100.40
 galera_cluster_backup_log_path="/data/shared/logs"
 galera_cluster_backup_retention_days=7
+galera_cluster_backup_incremental_interval="5m"
 
 galera_cluster_node1_iscsi_targetportal="192.168.100.40:3260"
 galera_cluster_node1_iscsi_iqn="iqn.2018-04.io.idstudios:server.galera"
