--- a/k8s/clusters/tier1/galera.conf
+++ b/k8s/clusters/tier1/galera.conf
@@ -16,6 +16,8 @@ galera_cluster_backup_nfs_server=192.168.100.40
 galera_cluster_backup_path="/data/shared/backups"
 galera_cluster_backup_log_nfs_server=192.168.100.40
 galera_cluster_backup_log_path="/data/shared/logs"
+galera_cluster_backup_temp_nfs_server=192.168.100.40
+galera_cluster_backup_temp_path="/data/shared/temp"
 galera_cluster_backup_retention_days=7
 galera_cluster_backup_incremental_interval="5m"
 
