--- a/images/mariadb-galera-haproxy/haproxy3.cfg
+++ b/images/mariadb-galera-haproxy/haproxy3.cfg
@@ -1,9 +1,9 @@
 listen  haproxy_3306
         bind *:3306
         mode tcp
-        timeout connect 10800
-        timeout client 10800
-        timeout server 10800
+        timeout connect $HAPROXY_GALERA_TIMEOUT
+        timeout client $HAPROXY_GALERA_TIMEOUT
+        timeout server $HAPROXY_GALERA_TIMEOUT
         balance leastconn
         option httpchk
         option allbackups
