--- a/k8s/mariadb-galera-template.yml
+++ b/k8s/mariadb-galera-template.yml
@@ -144,3 +144,21 @@
     run_once: true
     become: false
     
+  - name: Generate the restore to seed job manifest
+    local_action:
+      module: template
+      src: templates/galera-restore-seed-job.j2
+      dest: "{{ galera_cluster_home }}/3-node/galera-3-restore-seed.yml"
+      mode: 0766
+    run_once: true
+    become: false
+
+  - name: Generate the restore to seed job manifest
+    local_action:
+      module: template
+      src: templates/galera-restore-seed-job.j2
+      dest: "{{ galera_cluster_home }}/5-node/galera-5-restore-seed.yml"
+      mode: 0766
+    run_once: true
+    become: false
+    
